[gd_scene load_steps=8 format=3 uid="uid://bc2joqlpfqxui"]

[ext_resource type="Script" path="res://addons/kamran_wali/duniya_skapare/plugins/ds_wave_function_collapse/ds_wfc_settings.gd" id="1_s6hkl"]
[ext_resource type="Script" path="res://addons/kamran_wali/duniya_skapare/plugins/ds_wave_function_collapse/ds_tile_rules.gd" id="4_0a3y5"]
[ext_resource type="Script" path="res://addons/kamran_wali/duniya_skapare/plugins/ds_wave_function_collapse/ds_save_load.gd" id="5_fudd3"]
[ext_resource type="PackedScene" uid="uid://cxvsmixrg237s" path="res://addons/kamran_wali/duniya_skapare/plugins/ds_wave_function_collapse/edge_rule_ui.tscn" id="5_xeytb"]

[sub_resource type="GDScript" id="GDScript_f0lxh"]
script/source = "@tool
# extends \"res://addons/kamran_wali/duniya_skapare/plugins/ds_wave_function_collapse/ds_base.gd\"
extends Control

# Constants
const DS_WFC_DATA: GDScript = preload(\"res://addons/kamran_wali/duniya_skapare/scripts/resources/ds_wfc_data.gd\")
const DS_WFC_SETTINGS: GDScript = preload(\"res://addons/kamran_wali/duniya_skapare/plugins/ds_wave_function_collapse/ds_wfc_settings.gd\")
const DS_TILE_RULES: GDScript = preload(\"res://addons/kamran_wali/duniya_skapare/plugins/ds_wave_function_collapse/ds_tile_rules.gd\")
const DS_SAVE_LOAD: GDScript = preload(\"res://addons/kamran_wali/duniya_skapare/plugins/ds_wave_function_collapse/ds_save_load.gd\")

# Properties from the scene
var _msg_save: Label

# Properties for internal usage
var _data: DS_WFC_DATA = load(\"res://addons/kamran_wali/duniya_skapare/settings/wave_function_collapse/data.tres\")
var _wfc_settings: DS_WFC_SETTINGS
var _tile_rules: DS_TILE_RULES
var _save_load: DS_SAVE_LOAD
var _tile_edges: Control
var _counter1:= -1

func _enter_tree() -> void:
    _wfc_settings = $Main_Container/TabContainer/WFC_Settings
    _tile_rules = $Main_Container/TabContainer/Tile_Rules
    _save_load = $Save_Load_Container
    _tile_edges = $Main_Container/TabContainer/Tile_Rules/Holder/Tile_Edges
    _msg_save = $Main_Container/ButtonContainer/Msg_Save

    _wfc_settings.set_main_ui(self)
    _save_load.set_main_ui(self)
    _tile_rules.set_main_ui(self)
    
    _counter1 = 0
    while _counter1 < _tile_edges.get_child_count(): # Loop for initializing the edge rule UIs
        _tile_edges.get_child(_counter1).set_main_ui(self)
        _counter1 += 1

## This method shows the unsaved message.
func show_unsaved_message(msg:String) -> void:
    _msg_save.text = msg
    _msg_save.visible = true

## This method sets up the UI.
func load_setup() -> void:
    _wfc_settings.setup()
    _tile_rules.setup()

## This method loads a new data.
func load_data(data: DS_WFC_Data) -> void:
    _data = data

## This method gets the data.
func get_data() -> DS_WFC_Data:
    return _data

func _on_btn_save_pressed():
    _data.save()
    _msg_save.visible = false

func _on_btn_reset_pressed():
    _data.data_reset()
    _wfc_settings.reset() # Resetting wfc setting
    _tile_rules.setup() # Resetting the edges

func _on_btn_new_pressed():
    _save_load.show_menu(true)

func _on_btn_load_pressed():
    _save_load.show_menu(false)

func _on_tab_container_tab_changed(tab:int):
    if tab == 1: # Condition to show the tile rules tab
        _tile_rules.setup()"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u4eh3"]
bg_color = Color(0.113725, 0.133333, 0.160784, 0.898039)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h5i1a"]
bg_color = Color(0.113725, 0.133333, 0.160784, 1)

[node name="Wave Function Collapse" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = SubResource("GDScript_f0lxh")

[node name="Main_Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Main_Container"]
layout_mode = 2

[node name="Btn_Save" type="Button" parent="Main_Container/ButtonContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "SAVE"

[node name="Btn_New" type="Button" parent="Main_Container/ButtonContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "NEW"

[node name="Btn_Load" type="Button" parent="Main_Container/ButtonContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "LOAD"

[node name="Msg_Save" type="Label" parent="Main_Container/ButtonContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Unsaved Changes!"

[node name="Btn_Reset" type="Button" parent="Main_Container/ButtonContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 24
text = "RESET"

[node name="TabContainer" type="TabContainer" parent="Main_Container"]
layout_mode = 2
size_flags_vertical = 3

[node name="WFC_Settings" type="ScrollContainer" parent="Main_Container/TabContainer"]
layout_mode = 2
script = ExtResource("1_s6hkl")

[node name="Holder" type="VBoxContainer" parent="Main_Container/TabContainer/WFC_Settings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NOT_Container" type="HBoxContainer" parent="Main_Container/TabContainer/WFC_Settings/Holder"]
layout_mode = 2

[node name="Label" type="Label" parent="Main_Container/TabContainer/WFC_Settings/Holder/NOT_Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Number of Tiles:"

[node name="Txt_NoT" type="LineEdit" parent="Main_Container/TabContainer/WFC_Settings/Holder/NOT_Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "3"

[node name="Btn_NOT_OK" type="Button" parent="Main_Container/TabContainer/WFC_Settings/Holder/NOT_Container"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "OK"

[node name="Tile_Container" type="GridContainer" parent="Main_Container/TabContainer/WFC_Settings/Holder"]
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="Tile_Rules" type="ScrollContainer" parent="Main_Container/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("4_0a3y5")

[node name="Holder" type="VBoxContainer" parent="Main_Container/TabContainer/Tile_Rules"]
layout_mode = 2

[node name="Tile_Selection_Container" type="HBoxContainer" parent="Main_Container/TabContainer/Tile_Rules/Holder"]
layout_mode = 2

[node name="Label" type="Label" parent="Main_Container/TabContainer/Tile_Rules/Holder/Tile_Selection_Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Tile"

[node name="OB_Tile_List" type="OptionButton" parent="Main_Container/TabContainer/Tile_Rules/Holder/Tile_Selection_Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
item_count = 3
selected = 0
popup/item_0/text = "ground"
popup/item_0/id = 0
popup/item_1/text = "water"
popup/item_1/id = 1
popup/item_2/text = "coast"
popup/item_2/id = 2

[node name="Tile_Edges" type="GridContainer" parent="Main_Container/TabContainer/Tile_Rules/Holder"]
custom_minimum_size = Vector2(1152, 512)
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="UP" parent="Main_Container/TabContainer/Tile_Rules/Holder/Tile_Edges" instance=ExtResource("5_xeytb")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
_edge_name = "UP (+y)"

[node name="NORTH" parent="Main_Container/TabContainer/Tile_Rules/Holder/Tile_Edges" instance=ExtResource("5_xeytb")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
_edge_name = "NORTH (-z)"
_index_edge = 1

[node name="EAST" parent="Main_Container/TabContainer/Tile_Rules/Holder/Tile_Edges" instance=ExtResource("5_xeytb")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
_edge_name = "EAST (+x)"
_index_edge = 2

[node name="BOTTOM" parent="Main_Container/TabContainer/Tile_Rules/Holder/Tile_Edges" instance=ExtResource("5_xeytb")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
_edge_name = "BOTTOM (-y)"
_index_edge = 3

[node name="SOUTH" parent="Main_Container/TabContainer/Tile_Rules/Holder/Tile_Edges" instance=ExtResource("5_xeytb")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
_edge_name = "SOUTH (+z)"
_index_edge = 4

[node name="WEST" parent="Main_Container/TabContainer/Tile_Rules/Holder/Tile_Edges" instance=ExtResource("5_xeytb")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
_edge_name = "WEST (-x)"
_index_edge = 5

[node name="Save_Load_Container" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u4eh3")
script = ExtResource("5_fudd3")

[node name="HeaderPanel" type="Panel" parent="Save_Load_Container"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 58.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h5i1a")

[node name="Lbl_Menu_Name" type="Label" parent="Save_Load_Container/HeaderPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "SAVE/LOAD"

[node name="PathContainer" type="HBoxContainer" parent="Save_Load_Container"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 145.0
offset_bottom = 187.0
grow_horizontal = 2

[node name="Lbl_Path" type="Label" parent="Save_Load_Container/PathContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Path:"

[node name="Txt_Path" type="LineEdit" parent="Save_Load_Container/PathContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="NameContainer" type="HBoxContainer" parent="Save_Load_Container"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 208.0
offset_bottom = 250.0
grow_horizontal = 2

[node name="Lbl_Name" type="Label" parent="Save_Load_Container/NameContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Name:"

[node name="Txt_Name" type="LineEdit" parent="Save_Load_Container/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="ButtonContainer" type="HBoxContainer" parent="Save_Load_Container"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 300.0
offset_bottom = 342.0
grow_horizontal = 2
alignment = 1

[node name="Btn_Action" type="Button" parent="Save_Load_Container/ButtonContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ACTION"

[node name="Btn_Cancel" type="Button" parent="Save_Load_Container/ButtonContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "CANCEL"

[connection signal="pressed" from="Main_Container/ButtonContainer/Btn_Save" to="." method="_on_btn_save_pressed"]
[connection signal="pressed" from="Main_Container/ButtonContainer/Btn_New" to="." method="_on_btn_new_pressed"]
[connection signal="pressed" from="Main_Container/ButtonContainer/Btn_Load" to="." method="_on_btn_load_pressed"]
[connection signal="pressed" from="Main_Container/ButtonContainer/Btn_Reset" to="." method="_on_btn_reset_pressed"]
[connection signal="tab_changed" from="Main_Container/TabContainer" to="." method="_on_tab_container_tab_changed"]
[connection signal="text_changed" from="Main_Container/TabContainer/WFC_Settings/Holder/NOT_Container/Txt_NoT" to="Main_Container/TabContainer/WFC_Settings" method="_on_txt_no_t_text_changed"]
[connection signal="pressed" from="Main_Container/TabContainer/WFC_Settings/Holder/NOT_Container/Btn_NOT_OK" to="Main_Container/TabContainer/WFC_Settings" method="_on_btn_not_ok_pressed"]
[connection signal="item_selected" from="Main_Container/TabContainer/Tile_Rules/Holder/Tile_Selection_Container/OB_Tile_List" to="Main_Container/TabContainer/Tile_Rules" method="_on_ob_tile_list_item_selected"]
[connection signal="text_changed" from="Save_Load_Container/PathContainer/Txt_Path" to="Save_Load_Container" method="_on_txt_path_text_changed"]
[connection signal="pressed" from="Save_Load_Container/ButtonContainer/Btn_Action" to="Save_Load_Container" method="_on_btn_action_pressed"]
[connection signal="pressed" from="Save_Load_Container/ButtonContainer/Btn_Cancel" to="Save_Load_Container" method="_on_btn_cancel_pressed"]
